Fixed misaligned label on entry

--- a/public/s/styles/scss/stylesheet.scss
+++ b/public/s/styles/scss/stylesheet.scss
@@ -456,7 +456,7 @@ footer {
 
     label {
         margin: .5em 0;
-        padding: .8em 1.2em;
+        padding: .4em 1.2em;
         font-size: 1em;
         width: 8em;
         text-align: left;
